--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".TestActivity" android:exported="false" />
+        <activity android:name=".TestActivity2" android:exported="false" />
     </application>
 
 </manifest>
